--- a/config.json
+++ b/config.json
@@ -1,15 +1,15 @@
 {
-    "ownerNumber": "6285158549166@s.whatsapp.net",
-    "ownerName": "aqulzz",
+    "ownerNumber": "6283129083971@s.whatsapp.net",
+    "ownerName": "Feri Store",
     "limitCount": 30,
     "gamewaktu": 60,
-    "botName": "Xinz Bot",
+    "botName": "Feri-Bot",
     "pathImg": "./media/Itsuki.jpg",
     "apikey": "YOUR_APIKEY",
-    "fake": "XINZ-BOTZ VERIFIED",
+    "fake": "FERI-BOTZ VERIFIED",
     "sesidInsta": "default",
-    "sessionName": "aqulzz",
-    "txtDonasi": "GOPAY : 085157226383\nTrakteer : https://trakteer.id/aqulzz\nSaweeria : https://saweria.co/aqulzz\nPulsa : 085157226383",
+    "sessionName": "FERI STORE",
+    "txtDonasi": "GOPAY : 083129083971\nTrakteer : https://trakteer.id/Feri\nSaweeria : https://saweria.co/Feri\nPulsa : 083129083971",
     "gcount": {
         "prem": 40,
         "user": 20
